#
# BUILD.bazel
#

package(default_visibility = ["//visibility:public"])

# Startup files and libraries
# Note: Some startup files (crt1.o, crti.o) may be missing from the sysroot.
# If needed, copy them from the original sysroot.

cc_import(
  name = "liblsan_preinit",
  objects = ["lib/liblsan_preinit.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libitm",
  static_library = "lib/libitm.a",
  shared_library = "lib/libitm.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "gcrt1",
  objects = ["lib/gcrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.memprof-preinit-x86_64",
  static_library = "lib/linux/libclang_rt.memprof-preinit-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtprec32",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtprec32.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libjpeg",
  shared_library = "lib/libjpeg.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtbeginT",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtbeginT.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtbeginS",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtbeginS.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.xray-basic-x86_64",
  static_library = "lib/linux/libclang_rt.xray-basic-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.builtins-x86_64",
  static_library = "lib/linux/libclang_rt.builtins-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.xray-profiling-x86_64",
  static_library = "lib/linux/libclang_rt.xray-profiling-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.memprof_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.memprof_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libgomp",
  static_library = "lib/libgomp.a",
  shared_library = "lib/libgomp.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libresolv",
  static_library = "lib/libresolv.a",
  shared_library = "lib/libresolv.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libasan",
  static_library = "lib/libasan.a",
  shared_library = "lib/libasan.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libBrokenLocale",
  static_library = "lib/libBrokenLocale.a",
  shared_library = "lib/libBrokenLocale.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libg",
  static_library = "lib/libg.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libc",
  static_library = "lib/libc.a",
  shared_library = "lib/libc.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "librt",
  static_library = "lib/librt.a",
  shared_library = "lib/librt.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libm",
  static_library = "lib/libm.a",
  shared_library = "lib/libm.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libjansson",
  shared_library = "lib/libjansson.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtprec64",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtprec64.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libz",
  static_library = "lib/libz.a",
  shared_library = "lib/libz.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libc_nonshared",
  static_library = "lib/libc_nonshared.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.crtbegin-x86_64",
  objects = ["lib/linux/clang_rt.crtbegin-x86_64.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtendS",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtendS.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libpcre2-posix",
  shared_library = "lib/libpcre2-posix.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libc++abi",
  static_library = "lib/libc++abi.a",
  shared_library = "lib/libc++abi.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.xray-dso-x86_64",
  static_library = "lib/linux/libclang_rt.xray-dso-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libdl",
  static_library = "lib/libdl.a",
  shared_library = "lib/libdl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "rcrt1",
  objects = ["lib/rcrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libubsan",
  static_library = "lib/libubsan.a",
  shared_library = "lib/libubsan.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.hwasan_aliases_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan_aliases_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libc++experimental",
  static_library = "lib/libc++experimental.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.cfi_diag-x86_64",
  static_library = "lib/linux/libclang_rt.cfi_diag-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.fuzzer_interceptors-x86_64",
  static_library = "lib/linux/libclang_rt.fuzzer_interceptors-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.stats-x86_64",
  static_library = "lib/linux/libclang_rt.stats-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.fuzzer-x86_64",
  static_library = "lib/linux/libclang_rt.fuzzer-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libthread_db",
  shared_library = "lib/libthread_db.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libasan_preinit",
  objects = ["lib/libasan_preinit.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libatomic",
  static_library = "lib/libatomic.a",
  shared_library = "lib/libatomic.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libm-2.40",
  static_library = "lib/libm-2.40.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libpcre2-16",
  shared_library = "lib/libpcre2-16.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.msan-x86_64",
  static_library = "lib/linux/libclang_rt.msan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.ubsan_standalone-x86_64",
  static_library = "lib/linux/libclang_rt.ubsan_standalone-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libgcc",
  static_library = "lib/gcc/x86_64-unknown-linux-gnu/14.2.1/libgcc.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.memprof-x86_64",
  static_library = "lib/linux/libclang_rt.memprof-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.nsan-x86_64",
  static_library = "lib/linux/libclang_rt.nsan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libstdc++",
  static_library = "lib/libstdc++.a",
  shared_library = "lib/libstdc++.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libnss_files",
  shared_library = "lib/libnss_files.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libcurl",
  shared_library = "lib/libcurl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libxml2",
  shared_library = "lib/libxml2.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libstdc++fs",
  static_library = "lib/libstdc++fs.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.dd-x86_64",
  static_library = "lib/linux/libclang_rt.dd-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libssp_nonshared",
  static_library = "lib/libssp_nonshared.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.cfi-x86_64",
  static_library = "lib/linux/libclang_rt.cfi-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.hwasan-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libpcre",
  shared_library = "lib/libpcre.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libexpat",
  shared_library = "lib/libexpat.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libanl",
  static_library = "lib/libanl.a",
  shared_library = "lib/libanl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libc_malloc_debug",
  shared_library = "lib/libc_malloc_debug.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libc++",
  static_library = "lib/libc++.a",
  shared_library = "lib/libc++.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libpcre2-32",
  shared_library = "lib/libpcre2-32.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libpthread",
  static_library = "lib/libpthread.a",
  shared_library = "lib/libpthread.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.stats_client-x86_64",
  static_library = "lib/linux/libclang_rt.stats_client-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libmvec",
  static_library = "lib/libmvec.a",
  shared_library = "lib/libmvec.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libnss_dns",
  shared_library = "lib/libnss_dns.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtbegin",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtbegin.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtfastmath",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtfastmath.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.safestack-x86_64",
  static_library = "lib/linux/libclang_rt.safestack-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crt1",
  objects = ["lib/crt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.asan_static-x86_64",
  static_library = "lib/linux/libclang_rt.asan_static-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libnss_hesiod",
  shared_library = "lib/libnss_hesiod.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.scudo_standalone_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.scudo_standalone_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libsupc++",
  static_library = "lib/libsupc++.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libnsl",
  shared_library = "lib/libnsl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libutil",
  static_library = "lib/libutil.a",
  shared_library = "lib/libutil.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libgcc_eh",
  static_library = "lib/gcc/x86_64-unknown-linux-gnu/14.2.1/libgcc_eh.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.ubsan_minimal-x86_64",
  static_library = "lib/linux/libclang_rt.ubsan_minimal-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.asan-x86_64",
  static_library = "lib/linux/libclang_rt.asan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.msan_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.msan_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "liborc_rt-x86_64",
  static_library = "lib/linux/liborc_rt-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.tysan-x86_64",
  static_library = "lib/linux/libclang_rt.tysan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libgcov",
  static_library = "lib/gcc/x86_64-unknown-linux-gnu/14.2.1/libgcov.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crti",
  objects = ["lib/crti.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtn",
  objects = ["lib/crtn.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtend",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtend.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.tsan_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.tsan_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.crtend-x86_64",
  objects = ["lib/linux/clang_rt.crtend-x86_64.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libsqlite3",
  shared_library = "lib/libsqlite3.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtprec80",
  objects = ["lib/gcc/x86_64-unknown-linux-gnu/14.2.1/crtprec80.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libcrypto",
  shared_library = "lib/libcrypto.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libhwasan_preinit",
  objects = ["lib/libhwasan_preinit.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.asan-preinit-x86_64",
  static_library = "lib/linux/libclang_rt.asan-preinit-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.tsan-x86_64",
  static_library = "lib/linux/libclang_rt.tsan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libssp",
  static_library = "lib/libssp.a",
  shared_library = "lib/libssp.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libturbojpeg",
  shared_library = "lib/libturbojpeg.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libssl",
  shared_library = "lib/libssl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libnss_compat",
  shared_library = "lib/libnss_compat.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libtsan_preinit",
  objects = ["lib/libtsan_preinit.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.gwp_asan-x86_64",
  static_library = "lib/linux/libclang_rt.gwp_asan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "grcrt1",
  objects = ["lib/grcrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libmcheck",
  static_library = "lib/libmcheck.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "Scrt1",
  objects = ["lib/Scrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.hwasan_aliases-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan_aliases-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.rtsan-x86_64",
  static_library = "lib/linux/libclang_rt.rtsan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "liblsan",
  static_library = "lib/liblsan.a",
  shared_library = "lib/liblsan.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.ctx_profile-x86_64",
  static_library = "lib/linux/libclang_rt.ctx_profile-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libtsan",
  static_library = "lib/libtsan.a",
  shared_library = "lib/libtsan.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libpcreposix",
  shared_library = "lib/libpcreposix.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.dfsan-x86_64",
  static_library = "lib/linux/libclang_rt.dfsan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.scudo_standalone-x86_64",
  static_library = "lib/linux/libclang_rt.scudo_standalone-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libstdc++exp",
  static_library = "lib/libstdc++exp.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.fuzzer_no_main-x86_64",
  static_library = "lib/linux/libclang_rt.fuzzer_no_main-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.xray-fdr-x86_64",
  static_library = "lib/linux/libclang_rt.xray-fdr-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.asan_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.asan_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libhwasan",
  static_library = "lib/libhwasan.a",
  shared_library = "lib/libhwasan.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libquadmath",
  static_library = "lib/libquadmath.a",
  shared_library = "lib/libquadmath.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.ubsan_standalone_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.ubsan_standalone_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.xray-x86_64",
  static_library = "lib/linux/libclang_rt.xray-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.profile-x86_64",
  static_library = "lib/linux/libclang_rt.profile-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.lsan-x86_64",
  static_library = "lib/linux/libclang_rt.lsan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libpcre2-8",
  shared_library = "lib/libpcre2-8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.hwasan_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libnss_db",
  shared_library = "lib/libnss_db.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libgcc_s",
  shared_library = "lib/libgcc_s.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "Mcrt1",
  objects = ["lib/Mcrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libclang_rt.hwasan-preinit-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan-preinit-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libpng16",
  shared_library = "lib/libpng16.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "libunwind",
  static_library = "lib/libunwind.a",
  shared_library = "lib/libunwind.so",
  visibility = ["//visibility:public"],
)

# Usr directory filegroup
filegroup(
  name = "sysroot",
  srcs = glob([
    "include/**",
    "lib/**",
  ]),
)

# Include directory filegroup
filegroup(
  name = "include",
  srcs = glob(["include/**"]),
)

# Library directory filegroup
filegroup(
  name = "lib",
  srcs = glob(["lib/**"]),
)

# end
